responsividade login e cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -8,6 +8,7 @@
     <title>Cadastro</title>
 </head>
 <body>
+    <div class="tudo-login-87320">
     <main id="main-login">
     <div id="login-principal">
         
@@ -25,11 +26,16 @@
             <input type="password" placeholder="Confirmar senha" id="senha-login-confere" name="senha" required>
             <p style="font-size: 10px; color: #BA3B7A;" id="respostaLogin"></p>
         <button onclick="cadastrar()" class="botao-entrar">Cadastrar</button>
+        <a style="font-size: 12px;" href="cadastro.html">Ao se cadastrar você concorda com os <span style="color: #BA3B7A; font-size: 12px;">Termos de condição e uso</span></a>
         <p>ou</p>
         <button id="botao-logar-com-google">Logar com Google</button>
         <a href="login.html">Já possui cadastro? <span style="color: #BA3B7A;">Clique aqui</span></a>
     </div>
+    <div id="envolve-logo-tl-grande-login">
+        <img id="logo-lateral-login" src="img/StockBeauty (2).png" alt="">
+    </div>
 </main>
+</div>
 
 <script src="https://www.gstatic.com/firebasejs/10.6.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.6.0/firebase-auth-compat.js"></script>
