--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>login</title>
 </head>
 <body>
+    <div class="tudo-login-87320">
     <main id="main-login">
     <div id="login-principal">
         <div class="div-seta-voltar-login">
@@ -22,11 +23,16 @@
             <input type="password" placeholder="Senha" id="senha-login" name="senha">
             <p id="respostaLogin" style="font-size: 10px; color: #BA3B7A;" ></p>
         <button onclick="logar()" class="botao-entrar">Entrar</button>
+        <a style="font-size: 15px;" href="cadastro.html">Esqueceu a senha? <span style="color: #BA3B7A; font-size: 15px;">Clique aqui</span></a>
         <p>ou</p>
-        <button id="botao-logar-com-google">Logar com Google</button>
+        <button onclick="" id="botao-logar-com-google">Logar com Google</button>
         <a href="cadastro.html">Não possui cadastro? <span style="color: #BA3B7A;">Clique aqui</span></a>
     </div>
+    <div id="envolve-logo-tl-grande-login">
+        <img id="logo-lateral-login" src="img/StockBeauty (2).png" alt="">
+    </div>
 </main>
+</div>
 
 <script src="https://www.gstatic.com/firebasejs/10.6.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.6.0/firebase-auth-compat.js"></script>
